--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
-        "BOXICONS"
+        "BOXICONS",
+        "Jhon"
+    ],
+    "cSpell.ignoreWords": [
+        "Cill",
+        "SCROLLREVEAL",
+        "Swiper",
+        "Vusy"
     ]
 }
