Update personal information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
         "BOXICONS",
-        "Jhon"
+        "Colaboratory",
+        "Jhon",
+        "Matplotlib",
+        "Numpy"
     ],
     "cSpell.ignoreWords": [
         "Cill",
